tests/snapshots/snapshots__a_dialog_opened_while_a_marking_is_held_says_which_it_means.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 4 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│ ▾ fixture                             6wt 1●   ││ chore/clean  recent · last touched 9d                              │
│ │ ◆ main                                   2h  ││ /fixture/clean                                                     │
│▌│ ● feat/ahead                       ↑1    1d  ││                                                                    │
│ │ ● chore/clean       ╭ Remove worktree? ────────────────────────────────────────────────────╮                       │
│ │ ● (3head000)        │ /fixture/clean                                                       │                       │
│▌│ ● feat/dirty        │ branch chore/clean                                                   │ts off main            │
│ │ ✗ docs/gone         │ Clean. Nothing would be lost.                                        │                       │
│ │ ● fix/locked        │ 2 worktrees are marked. This removes only the one above.             │                       │
│                       │                                                                      │                       │
│                       │  y  do it     n  cancel                                              │                       │
│                       │                                                                      │                       │
│                       ╰──────────────────────────────────────────────────────────────────────╯                       │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 2 marked  2 uncommitted files · 1 commit only there   esc clears · d still removes the row under the cursor
