tests/snapshots/snapshots__a_failure_is_shown_in_full.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 2 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                    ↑   ↓   ±     AGE  ││ fixture                                                            │
│ ▾ fixture (7)               1       2      2h  ││ /fixture/repo                                                      │
│ │ ◆ main                                   2h  ││                                                                    │
│ │ ● feat/ahead              1              1d  ││ origin    git@github.com:fixture/fixture.git                       │
│ │ ● chore/clean    ╭ Could not remove the worktree ─────────────────────────────────────────────╮                    │
│ │ ● (3head000)     │ git -C ~/Code/quarry worktree remove ~/Code/.worktrees/quarry/feat/x       │                    │
│ │ ● feat/dirty     │ fatal: '/Users/x/Code/.worktrees/quarry/feat/x' contains modified or       │                    │
│ │ ✗ docs/gone      │ untracked files, use --force to delete it                                  │ll surface it       │
│ │ ● fix/locked     │                                                                            │                    │
│                    │                                                                            │                    │
│                    │ any key dismisses                                                          │ to salvage      2h │
│                    ╰────────────────────────────────────────────────────────────────────────────╯                 1d │
│                                                ││   ● chore/clean         Nothing to salvage — safe to remove     9d │
│                                                ││   ● (3head000)          Nothing to salvage — safe to remove    40d │
│                                                ││   ● feat/dirty          1 modified file, 1 untracked file      90d │
│                                                ││   ✗ docs/gone           Git cannot read this worktree — it m…   1y │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 j/k move  space mark  a sweep  ←/→ fold  d remove  D +branch  p prune  c shell  f lens  s sort  / find  ? help
