tests/snapshots/snapshots__a_marking_of_only_unremovable_worktrees_explains_itself.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 2 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                    ↑   ↓   ±     AGE  ││ fix/locked  ancient · last touched 1y                              │
│ ▾ fixture (6)               1       2      2h  ││ /fixture/locked                                                    │
│ │ ◆ main                                   2h  ││                                                                    │
│ │ ● feat/ahead              1              1d  ││ ┃ Locked: in use by a build — nothing to salvage                   │
│ │ ● chore/clean                            9d  ││                                                                    │
│ │ ● (3head000)                            40d  ││ branch    fix/locked  no upstream · 0 commits off main             │
│ │ ● feat/dirty                      2     90d  ││ head      6c000000  init: the first commit                         │
│ │ ✗ docs/gone                          !   1y  ││           Fixture · 1y ago                                         │
│▌│ ● fix/locked                         L   1y  ││ repo      fixture  /fixture/repo                                   │
│                                                ││                                                                    │
│                                                ││ Recent commits                                                     │
│                                                ││   6r000000   1y  init: the first commit                            │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 1 marked  nothing to salvage in any of them   d removes them · esc clears   The only marked worktree cannot be removed:
