tests/snapshots/snapshots__a_marking_swept_under_a_filter.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 2 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                    ↑   ↓   ±     AGE  ││ fixture                                                            │
│ ▾ fixture (6)               1       2      2h  ││ /fixture/repo                                                      │
│▌│ ● chore/clean                            9d  ││                                                                    │
│                                                ││ origin    git@github.com:fixture/fixture.git                       │
│                                                ││ base      main                                                     │
│                                                ││ worktrees 7 (6 linked)                                             │
│                                                ││ dirty     1                                                        │
│                                                ││                                                                    │
│                                                ││ Worktrees                                                          │
│                                                ││   ◆ main                Main checkout — nothing to salvage      2h │
│                                                ││   ● feat/ahead          1 off-base commit                       1d │
│                                                ││   ● chore/clean         Nothing to salvage — safe to remove     9d │
│                                                ││   ● (3head000)          Nothing to salvage — safe to remove    40d │
│                                                ││   ● feat/dirty          2 uncommitted files                    90d │
│                                                ││   ✗ docs/gone           Git cannot read this worktree — it m…   1y │
│                                                ││   ● fix/locked          Locked: in use by a build — nothing …   1y │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 1 marked  filter chore  nothing to salvage in any of them   d removes them · esc clears   Marked 1 safe to remove in fi
